# stunad-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  index.html  worker.py
engine/: CMakeLists.txt
engine/core/: Kernel.h  Mesh.h  Model.h  Node.h  Param.h  Parameter.h  Profile.h  Solid.h
engine/design/intent/: FlowChannelIntent.h
engine/design/resolver/: FlowChannelResolver.cpp  FlowChannelResolver.h  Resolver.h
engine/design/strategy/: CircularChannelStrategy.cpp  CircularChannelStrategy.h  FlowChannelStrategy.h  RectangularChannelStrategy.cpp  RectangularChannelStrategy.h
engine/extra/: GltfExporter.cpp  GltfExporter.h  MeshPostProcess.cpp  MeshPostProcess.h
engine/grammar/: GrammarBuilder.cpp  GrammarBuilder.h  GrammarExecutor.cpp  GrammarExecutor.h  GrammarProgram.h  GrammarValidator.cpp  GrammarValidator.h  Op.h
engine/kernel/: Kernel.h
engine/models/: LampModel.h
engine/modules/: Pedestal.h
engine/nodes/: LampNode.cpp  LampNode.h
engine/occt/: OcctKernel.cpp  OcctKernel.h  OcctProfile.h  OcctSolid.h  OcctTessellator.cpp  OcctTessellator.h
test/: CMakeLists.txt  main.cpp
